<resources>
    <string name="app_name">Roomie</string>
    <string name="password">Şifre</string>
    <string name="email">E-Posta</string>
    <string name="email_edu">E-Posta @std.yildiz.edu.tr</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="invaild_email">Geçersiz E-Posta</string>
    <string name="register_question">Henüz bir hesabın yok mu?</string>
    <string name="loging">Giriş Yapılıyor</string>
    <string name="saving">Kaydediliyor</string>
    <string name="send">Gönder</string>
    <string name="cancel">İptal</string>
    <string name="email_sent">E-Posta Gönderildi</string>
    <string name="email_cnt_sent">E-Posta Gönderilemedi</string>
    <string name="wrong_email_pw">E-Posta veya Şifre yanlış</string>
    <string name="name">İsim</string>
    <string name="register_unsuccess">Kayıt İşlemi Başarısız</string>
    <string name="save_success">Kayıt işlemi başarılı</string>
    <string name="save_unsuccess">Kaydedilemedi</string>
    <string name="fill_all_fields">Lütfen tüm alanları doldurun</string>
    <string name="min_len_password">En az 6 haneli bir şifre seçiniz</string>
    <string name="please_confrim_email">Lütfen E-Postanızı Doğrulayın</string>
    <string name="preparatory">Hazırlık</string>
    <string name="grade1">1. Sınıf</string>
    <string name="grade2">2. Sınıf</string>
    <string name="grade3">3. Sınıf</string>
    <string name="grade4">4. Sınıf</string>
    <string name="searching_house">Kalacak Ev Arıyor</string>
    <string name="searching_mate">Ev Arkadaşı Arıyor</string>
    <string name="not_searching">Aramıyor</string>
    <string name="distance">Kampüse İstenen/Olan Ev Uzaklığı (km)</string>
    <string name="time">Paylaşabileceğiniz Süre (Dönem)</string>
    <string name="state">Durum</string>
    <string name="grade">Sınıf</string>
    <string name="department">Bölüm</string>
    <string name="ytu_logo">YTU logo</string>
    <string name="profile">Profil</string>
    <string name="users">Kullanıcılar</string>
    <string name="find_on_map">Harita İle Bul</string>
    <string name="map">Harita</string>
    <string name="logout">Çıkış Yap</string>
    <string name="edit_profile">Profili Düzenle</string>
    <string name="change_password">Şifre değiştir</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="Change">Değiştir</string>
    <string name="recover_pw_success">Şifre Başarıyla Değiştirildi</string>
    <string name="add_photo">Fotoğraf Ekle</string>
    <string name="save">Kaydet</string>
    <string name="edu_info">Eğitim Bilgileri</string>
    <string name="search_title">Arama Kriterleri</string>
    <string name="distance_title">Kampüse Uzaklık:</string>
    <string name="time_title">Paylaşabileceği Süre:</string>
    <string name="contact">İletişim</string>
    <string name="tel_title">Telefon:</string>
    <string name="email_title">E-Posta:</string>
    <string name="tel">Telefon</string>
    <string name="distance_edit_title">Uzaklık:</string>
    <string name="km">(km)</string>
    <string name="time_edit_title">Süre:</string>
    <string name="semester">(Dönem)</string>
    <string name="no_apps">Bu işlem için uygulama bulunamadı</string>
    <string name="pick_filter">Filtre seç</string>
    <string name="filter">Filtrele</string>
    <string name="pickfilter">Bir filtre seçiniz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Bildirimler</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="API_KEY">AIzaSyDsXiPUfiV1ogGB7OyHk6c8VM4jKNxkaBc</string>
    <string name="yildiz_edu_confirm">std.yildiz.edu.tr uzantılı mailinizi giriniz</string>
    <string name="email_verification_sent">E-Posta Doğrulaması Gönderildi</string>
    <string name="max_distance">Kampüse maksimum uzaklık:</string>
    <string name="min_time">Paylaşabileceği minimum süre:</string>
    <string name="state_title">Durum:</string>
</resources>