<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".EditProfileActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="70dp">

        <ImageView
            android:id="@+id/img_editProfile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:padding="12dp"
            android:src="@drawable/add_a_photo" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:layout_marginBottom="25dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_editdepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/department"
        android:inputType="text"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_editgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/grade"
            android:focusable="false"
            android:layout_weight="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_editstate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/state"
            android:inputType="none"
            android:minHeight="48dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/distance_edit_title"/>
        <EditText
            android:id="@+id/et_editdistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/km"
            android:paddingStart="10dp"
            android:inputType="number"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/time_edit_title"/>
        <EditText
            android:id="@+id/et_edittime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/semester"
            android:paddingStart="10dp"
            android:inputType="number"
            android:minHeight="48dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_edittel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel"
        android:inputType="phone"
        android:minHeight="48dp" />


    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>