<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsersFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btn_menu_filter"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/border_shape"
            android:text="@string/pick_filter"
            android:layout_weight="2"
            android:textColor="@color/purple_700"
            android:layout_marginHorizontal="5dp"/>
        <EditText
            android:id="@+id/et_filter"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:padding="8dp"
            android:hint="______________"
            android:paddingStart="15dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_shape"/>
        <Button
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/filter"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>