<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btn_menu_filter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/border_shape"
            android:text="@string/pick_filter"
            android:layout_weight="1"
            android:textColor="@color/purple_700"
            android:layout_marginHorizontal="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingHorizontal="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:background="@drawable/border_shape">
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/max_distance"/>
            <EditText
                android:id="@+id/et_filterdistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/km"
                android:paddingStart="10dp"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/border_shape">
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/min_time"/>
            <EditText
                android:id="@+id/et_filtertime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/semester"
                android:paddingStart="10dp"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:background="@drawable/border_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/state_title"/>
            <EditText
                android:id="@+id/et_filterstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginHorizontal="10dp"
                android:focusable="false"
                android:inputType="number"/>
            <Button
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/filter"/>
        </LinearLayout>
    </LinearLayout>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsFragment"
        tools:layout="@layout/fragment_maps" />
</LinearLayout>

